<resources>
    <string name="app_name">PlanNGo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Create New Account</string>
    <string name="fullName">Full Name</string>
    <string name="signUp">Sign Up</string>
    <string name="textView2">Full Name : </string>
    <string name="textView_Fname" />
    <string name="textView5">Gender : </string>
    <string name="textView_Gender" />
    <string name="imageView_ProPic">Profie pic</string>
    <string name="editText4" />
    <string name="genderInput" />
    <string name="button2">Finish</string>
    <string name="editText_editStatus" />
    <string name="editText_editFirstName" />
    <string name="editText_editLastName" />
    <string name="button_Update">Update</string>
    <string name="textView_FriendsTitle">Friends :</string>
    <string name="textView_PendingRequests_Title">Pending Requests : </string>
    <string name="textView_RecommendationsTitle">Recommendations :</string>

    <string name="button_newTrip">Create New Trip</string>
    <string name="editText_TripName" />
    <string name="button_save">Save</string>
    <string name="editText_Location" />
    <string name="addFriendToChatName" />
    <string name="checkBox_Select">Select</string>
    <string name="button_DoneAddChat">Done</string>
    <string name="allTripsTitle">Join a trip?</string>
    <string name="myTripsTitle">My Trips</string>
    <string name="join">Join</string>
    <string name="chat">Chat</string>
    <string name="view">View</string>
    <string name="places">Places</string>
    <string name="people">People</string>
    <string name="addPlaces">Add</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_way_trip">Map</string>
    <string name="wayTrip">Way Trip</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
</resources>