<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.praneeth.myapplication.UpdateProfile"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.77"
        app:srcCompat="@drawable/editpropic" />

    <EditText
        android:id="@+id/editText_editStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:ems="10"
        android:hint="Edit Your Status"
        android:inputType="textPersonName"
        android:text="@string/editText_editStatus" />


        <EditText
            android:id="@+id/editText_editFirstName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="Edit First Name"
            android:inputType="textPersonName"
            android:text="@string/editText_editFirstName" />

        <EditText
            android:id="@+id/editText_editLastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Edit Last Name"
            android:inputType="textPersonName"
            android:text="@string/editText_editLastName" />


    <Button
        android:id="@+id/button_Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Update" />
</LinearLayout>
