<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.praneeth.myapplication.TripDetailActivity"
    android:weightSum="1"
    android:id="@+id/container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPlaces"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/places"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/places"
            app:layout_constraintRight_toRightOf="@+id/places"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/btnAddPlaces"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/addPlaces"
            android:textSize="8sp" />

        <Button
            android:id="@+id/btnWayTrip"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/wayTrip"
            android:textSize="8sp" />
    </LinearLayout>

<!--    <ListView
        android:id="@+id/lvPlaces"
        android:layout_width="365dp"
        android:layout_height="182dp"
        android:fadeScrollbars="true"
        android:fastScrollEnabled="false"
        app:layout_constraintLeft_toLeftOf="@+id/tvPeople"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteY="27dp" />-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lvPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvPeople"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:text="@string/people"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="202dp" />

        <Button
            android:id="@+id/btnChatNow"
            android:layout_width="99dp"
            android:layout_height="30dp"
            android:text="@string/chat"
            android:textSize="8sp"
            tools:layout_editor_absoluteX="252dp"
            tools:layout_editor_absoluteY="202dp"
            android:layout_weight="0.07" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvPeople"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="367dp"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="248dp" />

</LinearLayout>
