<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.praneeth.myapplication.NewTripActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:text="Choose a Picture For Your Trip " />

    <ImageView
        android:id="@+id/imageView_FtripPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.53"
        android:src="@drawable/addtrip" />

    <EditText
        android:id="@+id/editText_TripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:ems="10"
        android:hint="Enter A Name For Your Trip"
        android:inputType="textPersonName"
        android:text="@string/editText_TripName" />

    <EditText
        android:id="@+id/editText_Location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:ems="10"
        android:hint="Location"
        android:inputType="textPersonName"
        android:text="@string/editText_Location" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:text="@string/button_save" />
</LinearLayout>
