<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.praneeth.myapplication.HomeActivity">

    <TextView
        android:id="@+id/tvAllTripsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allTripsTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewJoinableTripsList"
        android:layout_width="match_parent"
        android:layout_height="301dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMyTripsTitle"
            android:layout_width="322dp"
            android:layout_height="match_parent"
            android:text="@string/myTripsTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewMyTripsList"
        android:layout_width="match_parent"
        android:layout_height="127dp" />

    <Button
        android:id="@+id/button_newTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_newTrip" />

</LinearLayout>
