<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.praneeth.myapplication.ContactsActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView_FriendsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_FriendsTitle"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_FriendsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.24"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textView_PendingRequests_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:text="@string/textView_PendingRequests_Title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_RequestsList"
        android:layout_width="match_parent"
        android:layout_height="105dp" />

    <TextView
        android:id="@+id/textView_RecommendationsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_RecommendationsTitle"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_RecommendationsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.39" />
</LinearLayout>
